Cycles Fresnel nodes - broken gradients on objects with negative scale (final render only, not viewport) #41219

Closed
opened 2014-07-28 10:45:02 +02:00 by Tom Benedett · 12 comments

System Information
Windows 7 64-bit, GTX-580, AMD FX-4100, 8 GB RAM

Blender Version
Broken: Buildbot 2.71 698a9a2, and buildbot 2.71 b49e6d0
Worked: 2.70a official

Short description of error
On an object with negative scale, a cycles Fresnel or Layer Weight (just Fresnel output, not Facing) produces a sharp divide in final (but not viewport) renders, instead of a smooth gradient, as seen below:
Fresnel_and_Layer_Weight_Scale_Problem.png
The sphere on the left has x-scale -1; the one on the right is all positively scaled.

Exact steps for others to reproduce the error
Take some smoothly-curving object, scale it by -1 along some axis (or all three, but not just two, that isn't broken;) and apply a material that uses a Fresnel mixing factor (default IOR/mix factor.) There will be a sharp divide where there should not be on the final render, but not in the viewport render,

Alternatively, see here:

Fresnel_and_Layer_Weight_Scale_Problem.blend

Try the two different Fresnel nodes and the Layer Weight, and observe that only Layer Weight works in final renders, but all three work in the viewport.

**System Information** Windows 7 64-bit, GTX-580, AMD FX-4100, 8 GB RAM **Blender Version** Broken: Buildbot 2.71 698a9a2, and buildbot 2.71 b49e6d0 Worked: 2.70a official **Short description of error** On an object with negative scale, a cycles Fresnel or Layer Weight (just Fresnel output, not Facing) produces a sharp divide in final (but not viewport) renders, instead of a smooth gradient, as seen below: ![Fresnel_and_Layer_Weight_Scale_Problem.png](https://archive.blender.org/developer/F99987/Fresnel_and_Layer_Weight_Scale_Problem.png) The sphere on the left has x-scale -1; the one on the right is all positively scaled. **Exact steps for others to reproduce the error** Take some smoothly-curving object, scale it by -1 along some axis (or all three, but not just two, that isn't broken;) and apply a material that uses a Fresnel mixing factor (default IOR/mix factor.) There will be a sharp divide where there should not be on the final render, but not in the viewport render, Alternatively, see here: [Fresnel_and_Layer_Weight_Scale_Problem.blend](https://archive.blender.org/developer/F99986/Fresnel_and_Layer_Weight_Scale_Problem.blend) Try the two different Fresnel nodes and the Layer Weight, and observe that only Layer Weight works in final renders, but all three work in the viewport.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @moak

Added subscriber: @moak
Sergey Sharybin was assigned by Bastien Montagne 2014-07-28 12:47:12 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue with latest master as well. Sergey, this is your playground now. ;)

Can confirm the issue with latest master as well. Sergey, this is your playground now. ;)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue had actually been fixed already in 9fcaac5 and eb8f85d. Please grab latest build from builder.blender.org and give it a try.

Let me know if the issue still exists for you, but for until then considering this issue is fixed.

This issue had actually been fixed already in 9fcaac5 and eb8f85d. Please grab latest build from builder.blender.org and give it a try. Let me know if the issue still exists for you, but for until then considering this issue is fixed.
Author

Nope, not fixed; it's still there as of the very latest Win64 buildbot version (7c9b8aa).

I hit F12 in the example file (using the new Blender version) and still get this image:

Fresnel_and_Layer_Weight_Scale_Problem_still_here.png

Nope, not fixed; it's still there as of the very latest Win64 buildbot version (7c9b8aa). I hit F12 in the example file (using the new Blender version) and still get this image: ![Fresnel_and_Layer_Weight_Scale_Problem_still_here.png](https://archive.blender.org/developer/F102799/Fresnel_and_Layer_Weight_Scale_Problem_still_here.png)

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Indeed, for some reason it worked from the desktop..

Indeed, for some reason it worked from the desktop..

This issue was referenced by bfaf4f2d0d

This issue was referenced by bfaf4f2d0d4e600f6f8e253033de2b05a93e3ec1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bfaf4f2d0d.

Closed by commit bfaf4f2d0d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41219
No description provided.